<resources>
    <string name="app_name">Articles Project</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_home">Home</string>
    <string name="title_likes">Likes</string>
    <string name="title_search">Search</string>
    <string name="title_bookmarks">BookMarks</string>
    <string name="title_profile">Profile</string>
    <string name="popular">Popular</string>
    <string name="recommended"> Recommended for you</string>
    <string name="tech">Tech</string>
    <string name="enter">Entertainment</string>
    <string name="news">News</string>
    <string name="sport">Sport</string>
    <string name="buss">Business</string>
    <string name="profile_name00">Thomas Smith</string>
    <string name="post_title_00">Dog owners live Long and are more protected from danger</string>
    <string name="title_activity_details">DetailsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="details_text">In case you need another reason to snuggle your pup: According to a new study of more than 3.4 million people, owning a dog is linked to a longer life. The research, published in Scientific Reports, is the latest in a growing body of research suggesting that canine companions may be good for human health—especially for people who live alone. To study the link between dogs and longevity, researchers at Uppsala University in Sweden reviewed national registry records of Swedish men and women, ages 40 to 80. They focused on 3.4 million people who had no history of cardiovascular disease in 2001, and followed their health records—as well as whether they registered as a dog owner—for about 12 years. Dog ownership registries are mandatory in Sweden, and every visit to a hospital is recorded in a national database. They found that dog owners had a lower risk of death due to cardiovascular disease than people who did not report owning a dog, as well as a lower risk of death from other causes. That was true even after adjusting for factors such as smoking, body mass index and socioeconomic status.</string>
    <string name="back_button_desc">back button</string>
    <string name="more_btn_desc">more btn desc</string>


    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="your_account">Your Account</string>
    <string name="interests">Interests</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="feedback">Feedback</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="women_name">Christine De.</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="user_bio">Content creator and devoted cat mom. She/her. Get 2x weekly emails about how to make money by writing online: https://zuliewrites.ck.page/3e3d3a8187</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="article_star">⭐</string>
    <string name="icon_bookmark_description">bookmark icon</string>
    <string name="stars_total_number">239</string>
    <string name="article_category">sport</string>
    <string name="details_main_image">TODO</string>
    <string name="details_cover_image">Cover Image</string>
    <string name="share_button_description">Share button</string>
    <string name="bookmark_button_description">Bookmark button description</string>
    <string name="most_recent_title">Most Recent</string>
    <string name="view_all_filter">View All</string>
    <string name="cover_image_recent">Cover image recent</string>
    <string name="article_title_popular">Dog owners live Long and are more protected from danger</string>
    <string name="article_stars_number">239</string>
    <string name="image_cover_popular">Image cover popular</string>
    <string name="article_hours_read">14h</string>
    <string name="username_text">01 Syergy</string>
    <string name="btn_follow_user">Follow</string>
    <string name="total_followers">1200 Followers</string>
    <string name="image_back_btn">TODO</string>
    <string name="cd_image_recommended_cover">TODO</string>
    <string name="password">Password</string>
    <string name="email_hint">Write your email</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="logo">logo</string>
    <string name="username_hint">Write your user name</string>
    <string name="submit">Submit</string>


</resources>