<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    android:layout_marginEnd="20dp"
    android:id="@+id/popular_card"
    >

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/image_cover_popular"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:src="@drawable/dogs"
            app:civ_border_width="2dp"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/image_cover_popular" />



        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="5dp"
            android:gravity="center">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/image_user_popular"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/profile00"
                app:civ_border_color="#FF000000"
                android:layout_marginEnd="15dp"

                />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tv_username_popular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/women_name"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/tv_post_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/article_hours_read"

                    android:textColor="#757575" />

            </androidx.appcompat.widget.LinearLayoutCompat>



        </androidx.appcompat.widget.LinearLayoutCompat>

        <TextView
            android:id="@+id/tv_post_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="15sp"
            android:text="@string/article_title_popular"/>


<androidx.appcompat.widget.LinearLayoutCompat
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    >

    <TextView
        android:id="@+id/tv_post_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/article_category"
        android:textColor="#757575" />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_weight="1"/>

    <TextView
        android:id="@+id/tv_post_likes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/article_stars_number"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/article_star"
        android:textColor="#827717"
        tools:ignore="TextContrastCheck" />



</androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>