<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/normal_15"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:id="@+id/rl_app_icon"
        android:layout_width="@dimen/logo_size"
        android:layout_height="@dimen/logo_size"
        android:layout_margin="50dp"
        android:background="@drawable/circle_purple_200"
        android:padding="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/user"
            android:contentDescription="@string/logo" />
    </RelativeLayout>

    <EditText
        android:id="@+id/edt_signup_password"
        style="@style/input_style"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:autofillHints=""
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rl_app_icon"
        tools:ignore="TextContrastCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/edt_password"
        style="@style/input_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:autofillHints=""
        android:hint="@string/password"

        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/edt_signup_password"
        tools:layout_editor_absoluteX="20dp" />



    <com.google.android.material.button.MaterialButton
        android:id="@+id/tv_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/login"
        app:layout_constraintTop_toBottomOf="@id/edt_password"
        />
    <TextView
        android:id="@+id/tv_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/signup"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_login"
        app:layout_constraintRight_toRightOf="@id/tv_login"
        android:textSize="20sp" />
</androidx.constraintlayout.widget.ConstraintLayout>
