<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.details.DetailsActivity">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <RelativeLayout
        android:id="@+id/rl_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/image_details_cover"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/details_cover_image"
            android:paddingTop="20dp"
            android:scaleType="centerCrop"
            android:src="@drawable/details_image"
            app:civ_border_width="2dp" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:paddingHorizontal="15dp">

            <ImageButton
                android:id="@+id/back_btn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/rounded_button"
                android:contentDescription="@string/back_button_desc"
                android:gravity="center_vertical|center_horizontal"
                android:src="@drawable/ic_arrow_back_24_white"
                android:textColor="#fff"
                tools:ignore="SpeakableTextPresentCheck,RedundantDescriptionCheck,DuplicateSpeakableTextCheck" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <ImageButton
                android:id="@+id/more_id"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/rounded_button"
                android:contentDescription="@string/more_btn_desc"
                android:gravity="center_vertical|center_horizontal"
                android:src="@drawable/ic__bookmark_border_24"
                android:textColor="#fff"
                tools:ignore="SpeakableTextPresentCheck" />

        </androidx.appcompat.widget.LinearLayoutCompat>


    </RelativeLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/details_header"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/rl_details">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/image_details_user"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginEnd="15dp"
                android:src="@drawable/profile04"
                app:civ_border_color="#FF000000"

                />

            <TextView
                android:id="@+id/tv_details_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_name00" />


        </androidx.appcompat.widget.LinearLayoutCompat>

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />

        <!--more btn -->

        <ImageView
            android:id="@+id/bookmark_btn"
            android:layout_width="33dp"
            android:layout_height="33dp"
            android:contentDescription="@string/bookmark_button_description"
            android:gravity="center_vertical|center_horizontal"
            android:src="@drawable/ic__bookmark_border_24"
            android:textColor="#fff"
            tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck,RedundantDescriptionCheck" />

        <ImageView
            android:id="@+id/share_btn"
            android:layout_width="33dp"
            android:layout_height="33dp"
            android:contentDescription="@string/share_button_description"
            android:gravity="center_vertical|center_horizontal"
            android:src="@drawable/ic_baseline_share_24"
            android:textColor="#fff"
            tools:ignore="SpeakableTextPresentCheck,RedundantDescriptionCheck" />


    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        android:id="@+id/tv_details_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="15dp"
        android:gravity="start"
        android:text="@string/post_title_00"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/details_header" />


    <ImageView
        android:id="@+id/image_details"
        android:layout_width="match_parent"
        android:paddingHorizontal="15dp"
        android:layout_height="300dp"
        android:layout_marginTop="5dp"
        android:layout_weight="1"
        android:contentDescription="@string/details_main_image"
        android:scaleType="centerCrop"
        android:src="@drawable/old_women_dog"
        app:civ_border_width="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_details_title"/>



    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_details_description"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="15dp"
        android:textSize="18sp"
        android:text="@string/details_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_details"/>

</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>