<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="@dimen/normal_15"
    android:paddingVertical="@dimen/normal_15"
    android:id="@+id/bookmark_card">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/bookmark_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_bookmark_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/women_name"
            android:textSize="20sp"
            android:textStyle="bold" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/bookmark_btn"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:contentDescription="@string/icon_bookmark_description"
            android:gravity="center_vertical|center_horizontal"
            android:src="@drawable/ic_bookmarks_24"
            android:textColor="@color/white" />


    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/bookmark_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bookmark_header">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/normal_15"
            android:layout_weight=".70"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_bookmark_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/post_title_00"
                android:textSize="@dimen/description_size"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:gravity="bottom"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:id="@+id/tv_bookmark_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/article_category"
                    android:textColor="#757575" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/tv_bookmark_stars"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stars_total_number" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/article_star"
                    android:textColor="#827717"
                    tools:ignore="TextContrastCheck" />


            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.constraintlayout.widget.ConstraintLayout>


        <ImageView
            android:id="@+id/image_bookmark_cover"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:contentDescription="@string/back_button_desc"
            android:gravity="center_vertical|center_horizontal"
            android:scaleType="centerCrop"
            android:src="@drawable/old_women_dog"
            android:textColor="@color/white"
            app:civ_border_width="2dp"
            tools:ignore="RedundantDescriptionCheck" />


    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.constraintlayout.widget.ConstraintLayout>