<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="@dimen/normal_15"
    android:paddingVertical="@dimen/normal_15"
    >








    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
       >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/normal_15"
            android:layout_weight=".70"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_user_article_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/post_title_00"
                android:textSize="@dimen/description_size"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:gravity="bottom"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:id="@+id/tv_user_article_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/article_category"
                    android:textColor="#757575" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/tv_user_article_stars"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stars_total_number" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/article_star"
                    android:textColor="#827717"
                    tools:ignore="TextContrastCheck" />


            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.constraintlayout.widget.ConstraintLayout>


        <ImageView
            android:id="@+id/image_user_article_cover"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:contentDescription="@string/back_button_desc"
            android:gravity="center_vertical|center_horizontal"
            android:scaleType="centerCrop"
            android:src="@drawable/old_women_dog"
            android:textColor="@color/white"
            app:civ_border_width="2dp"
            tools:ignore="RedundantDescriptionCheck" />


    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.constraintlayout.widget.ConstraintLayout>